# livermore-ctp

./: .env  .gitignore  CMakeLists.txt  README.md  configure.ps1  configure.sh  vcpkg.json
cmake/: FindCTP.cmake  ctp.cmake  ctpConfig.cmake.in
example/: CMakeLists.txt  main.cpp  md_example.cpp  trader_example.cpp
res/: config.ini
src/: config.cpp  config.h  error.h  main.cpp  quote.cpp  quote.h  receiver.cpp  receiver.h  trader.cpp  trader.h  util.cpp  util.h
